--- a/get-productive/src/App.css
+++ b/get-productive/src/App.css
@@ -1,42 +1,25 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Akaya+Telivigala&display=swap');
+
 .App {
+  font-family: 'Akaya Telivigala', cursive;
+  background-image: url("https://i.imgur.com/Ab3bX6x.jpg");
+  background-size: contain;
+  width: 100%;
+  height: 100%;
+  border: 2px solid;
+  color: pink;
+  resize: both;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.label-container{
+  background-color: grey;
+  width: 500px;
+  height: 500px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 25px;
+  opacity: 0.9;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-nav a{
-  margin: 2px 4px;
-}
