--- a/get-productive/src/App.css
+++ b/get-productive/src/App.css
@@ -8,18 +8,42 @@
   width: 100%;
   height: 100%;
   border: 2px solid;
-  color: pink;
+  color: rgb(108, 150, 197);
   resize: both;
   text-align: center;
 }
 
 .label-container{
+  border-radius: 25px;
   background-color: grey;
   width: 500px;
   height: 500px;
   margin-left: auto;
   margin-right: auto;
-  padding: 25px;
+  padding: 20px;
+  opacity: 0.9;
+
+}
+
+.tasks{
+  border-radius: 25px;
+  background-color: grey;
+  width: 300px;
+  height: 500px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 20px;
+  opacity: 0.9;
+}
+
+.detail{
+  border-radius: 25px;
+  background-color: grey;
+  width: 300px;
+  height: 500px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 20px;
   opacity: 0.9;
 }
 
