--- a/get-productive/src/App.css
+++ b/get-productive/src/App.css
@@ -4,23 +4,32 @@
 .App {
   font-family: 'Akaya Telivigala', cursive;
   background-image: url("https://i.imgur.com/Ab3bX6x.jpg");
+  position:fixed;
+  top:0;
+  left:0;
+  min-width: 100%;
+  min-height: 100%;
   background-size: contain;
   width: 100%;
   height: 100%;
-  border: 2px solid;
   color: rgb(108, 150, 197);
   resize: both;
   text-align: center;
 }
 
-.label-container{
+.nav{
+background-color: lightblue;
+}
+
+.labels-container{
   border-radius: 25px;
   background-color: grey;
-  width: 500px;
-  height: 500px;
+  color: rgb(108, 150, 197);
+  width: 300px;
+  height: 300px;
   margin-left: auto;
   margin-right: auto;
-  padding: 20px;
+  padding: 50px;
   opacity: 0.9;
 
 }
@@ -28,17 +37,60 @@
 .tasks{
   border-radius: 25px;
   background-color: grey;
+  color: rgb(108, 150, 197);
   width: 300px;
-  height: 500px;
+  height: 400px;
   margin-left: auto;
   margin-right: auto;
   padding: 20px;
   opacity: 0.9;
 }
+input[type=text] {
+  width: 80%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+}
+
+input[type=textarea]{
+  width: 80%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  background-color: #f8f8f8;
+  resize: none;
+
+}
+
+input[type=time]{
+  text-align: center;
+  width: 50%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+}
+
+input[type="date"]{
+  width: 50%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+}
+
+button{
+  background-color: rgb(108, 150, 197);
+  font-size: 16px;
+  border-radius: 12px;
+  color: black;
+  border: 2px solid pink;
+}
 
 .detail{
   border-radius: 25px;
   background-color: grey;
+  color: rgb(108, 150, 197);
   width: 300px;
   height: 500px;
   margin-left: auto;
