--- a/get-productive/src/App.css
+++ b/get-productive/src/App.css
@@ -4,31 +4,35 @@
 .App {
   font-family: 'Akaya Telivigala', cursive;
   background-image: url("https://i.imgur.com/Ab3bX6x.jpg");
+  background-repeat: no-repeat;
   position:fixed;
   top:0;
   left:0;
   min-width: 100%;
   min-height: 100%;
-  background-size: contain;
+  background-size: cover;
   width: 100%;
-  height: 100%;
+  height: 600px;
   color: rgb(108, 150, 197);
   resize: both;
   text-align: center;
+  overflow: scroll;
 }
 
 .nav{
 background-color: lightblue;
+padding: 15px;
 }
 
 .labels-container{
   border-radius: 25px;
   background-color: grey;
-  color: rgb(108, 150, 197);
+  color: rgb(19, 65, 117);
   width: 300px;
   height: 300px;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 15px;
   padding: 50px;
   opacity: 0.9;
 
@@ -37,16 +41,31 @@ background-color: lightblue;
 .tasks{
   border-radius: 25px;
   background-color: grey;
-  color: rgb(108, 150, 197);
+  color: rgb(15, 64, 121);
   width: 300px;
   height: 400px;
   margin-left: auto;
   margin-right: auto;
   padding: 20px;
   opacity: 0.9;
+  
 }
+
+.detail{
+  border-radius: 25px;
+  background-color: grey;
+  color: rgb(15, 64, 121);
+  width: 300px;
+  height: 400px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 20px;
+  opacity: 0.9;
+  overflow: scroll;
+}
+
 input[type=text] {
-  width: 80%;
+  width: 60%;
   padding: 12px 20px;
   margin: 8px 0;
   box-sizing: border-box;
@@ -85,17 +104,7 @@ button{
   border-radius: 12px;
   color: black;
   border: 2px solid pink;
+  margin: 8px;
 }
 
-.detail{
-  border-radius: 25px;
-  background-color: grey;
-  color: rgb(108, 150, 197);
-  width: 300px;
-  height: 500px;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 20px;
-  opacity: 0.9;
-}
 
