--- a/get-productive/src/App.css
+++ b/get-productive/src/App.css
@@ -36,7 +36,7 @@ padding: 15px;
   margin-top: 15px;
   padding: 30px;
   opacity: 0.9;
-  display: flex;
+  
 
 }
 
@@ -65,6 +65,8 @@ padding: 15px;
   padding: 20px;
   opacity: 0.9;
   overflow: scroll;
+  display: flex;
+  align-items: center;
 }
 
 input[type=text] {
